# verantyx

./: .gitignore  README.md  add_files.rb  add_updater.rb  add_view.rb  fix_paths.rb  fix_pbxproj2.rb  fix_webview.rb  get_app_state.swift  organize.sh  package_dmg.sh  project.yml  rebuild.sh  register_files.py  test_handshake.sh  test_mlx.swift  test_vision.swift  xcode_out.txt  xcodebuild_log.txt  zenn_article_draft.md
cli/verantyx-browser/crates/ronin-core/: Cargo.toml
cli/verantyx-browser/crates/ronin-hive/: Cargo.toml
cli/verantyx-browser/crates/ronin-sandbox/: Cargo.toml
cli/verantyx-browser/crates/vx-a11y-tree/: Cargo.toml
cli/verantyx-browser/crates/vx-browser/: Cargo.toml  test_wry.rs
cli/verantyx-browser/crates/vx-css/: Cargo.toml
cli/verantyx-browser/crates/vx-dom/: Cargo.toml
cli/verantyx-browser/crates/vx-ipc/: Cargo.toml
cli/verantyx-browser/crates/vx-media-pipeline/: Cargo.toml
cli/verantyx-browser/crates/vx-render/: Cargo.toml
cli/verantyx-browser/crates/vx-storage/: Cargo.toml
verantyx-browser/: Cargo.toml  README.md  login.html  test_fig.py
verantyx-browser/crates/ronin-cli/: Cargo.toml
verantyx-browser/crates/ronin-core/src/: tuning.rs
verantyx-browser/crates/ronin-diff-ux/: Cargo.toml
verantyx-browser/crates/ronin-diff-ux/src/: lib.rs
verantyx-browser/crates/ronin-git/: Cargo.toml
verantyx-browser/crates/ronin-git/src/: engine.rs
verantyx-browser/crates/ronin-hive/.ronin/: dynamic_aliases.json
verantyx-browser/crates/ronin-hive/examples/: ghost_cursor.rs  night_watch.rs  query_jcross.rs  test_ollama_hybrid.rs  test_safari_evaluator.rs
verantyx-browser/crates/ronin-hive/src/: config.rs  hive.rs
verantyx-browser/crates/ronin-linter/: Cargo.toml
verantyx-browser/crates/ronin-linter/src/: lib.rs
verantyx-browser/crates/ronin-rag/: Cargo.toml
verantyx-browser/crates/ronin-rag/src/: chunker.rs  lib.rs  memory.rs
verantyx-browser/crates/ronin-synapse/: Cargo.toml
verantyx-browser/crates/ronin-synapse/src/: lib.rs
verantyx-browser/crates/ronin-telemetry/src/: lib.rs  tracer.rs
verantyx-browser/crates/ronin-vfs-gatekeeper/: Cargo.toml
verantyx-browser/crates/ronin-warden/: Cargo.toml
verantyx-browser/crates/ronin-warden/src/: lib.rs
verantyx-browser/crates/vx-a11y/: Cargo.toml
verantyx-browser/crates/vx-a11y-tree/src/: lib.rs  tree.rs
verantyx-browser/crates/vx-a11y/src/: focus.rs  labels.rs  relations.rs  states.rs  tree.rs
verantyx-browser/crates/vx-browser/src/: bridge.rs  main.rs  simulator_ui.rs  stealth_bridge.rs
verantyx-browser/crates/vx-compositor/: Cargo.toml
verantyx-browser/crates/vx-compositor/src/: stacking.rs
verantyx-browser/crates/vx-css/src/: animation.rs  at_rules.rs  cascade_v2.rs  color.rs  containment_level2.rs  counter_styles.rs  css_anchor_1.rs  css_cascade_6.rs  css_conditional_4.rs  css_fonts_4.rs  css_fonts_5.rs  css_highlight_api.rs  css_nesting_1.rs  css_ruby_1.rs  css_shadow_parts.rs  css_text_3.rs  css_text_4.rs  css_values_4.rs  fill_stroke_level3.rs  grid_level3.rs  logical_properties.rs  media.rs  media_query_v2.rs  overscroll_behavior.rs  properties.rs  pseudo.rs  round_display_level1.rs  scroll_animations.rs  selector.rs  shapes_level1.rs  spatial_navigation.rs  view_transitions.rs  view_transitions_2.rs
verantyx-browser/crates/vx-dom/src/: css.rs  events.rs  manipulation.rs
verantyx-browser/crates/vx-extensions/: Cargo.toml
verantyx-browser/crates/vx-input/src/: action.rs  event_system.rs  lib.rs
verantyx-browser/crates/vx-ipc/src/: channel.rs  lib.rs  router.rs
verantyx-browser/crates/vx-js/: Cargo.toml
verantyx-browser/crates/vx-js/src/: ai_observer.rs  badging_api.rs  barcode_detection_api.rs  compression_streams.rs  contacts_manager_api.rs  css_font_loading.rs  device_posture_api.rs  edit_context_api.rs  fetch.rs  file_system_access.rs  keyboard_lock_api.rs  keyboard_map_api.rs  mutation_observer.rs  paint_timing.rs  permissions_api.rs  promise_queue.rs  wake_lock_api.rs  wakelock_api.rs  web_midi_api.rs  web_otp_api.rs  web_serial_api_ports.rs  web_speech_api.rs  web_speech_recognition.rs  web_usb_api.rs  web_xr_api.rs  web_xr_device_api.rs  webnn_api.rs  window_management_api.rs
verantyx-browser/crates/vx-layout/src/: align_level3.rs  anchor_position.rs  block_fragmentation.rs  box_model.rs  css_contain_3.rs  css_display_3.rs  css_line_grid_1.rs  css_lists_3.rs  css_logical_1.rs  css_overflow_4.rs  css_overscroll_1.rs  css_round_display_1.rs  css_scroll_snap_1.rs  css_spatial_nav_1.rs  css_tables_3.rs  css_text_decor_4.rs  css_view_transitions_2.rs  flex_level1.rs  flexbox.rs  float.rs  grid_level2.rs  intrinsic_sizing.rs  lib.rs  line_grid.rs  position_fallback.rs  regions_layout.rs  ruby_rendering.rs  stacking.rs  svg_layout.rs  table_v2.rs
verantyx-browser/crates/vx-media/: Cargo.toml
verantyx-browser/crates/vx-media-pipeline/src/: stream.rs
verantyx-browser/crates/vx-media/src/: canvas.rs  image.rs  lib.rs  video.rs
verantyx-browser/crates/vx-net/: Cargo.toml
verantyx-browser/crates/vx-net/src/: alt_svc.rs  background_sync.rs  cache.rs  cookie_store_api.rs  deprecation_reporting.rs  dns.rs  early_hints.rs  fedcm_api.rs  fetch.rs  file_system_observer.rs  http.rs  http2_framing.rs  http_cache.rs  idle_detection_api.rs  lib.rs  local_font_access.rs  network_error_logging.rs  private_network_access.rs  resource_loader.rs  sanitizer_api.rs  speculation_rules_api.rs  sse.rs  storage_access_api.rs  subresource_loading.rs  tls_context.rs  trust_tokens.rs  trusted_types.rs  web_nfc.rs  web_share_target.rs  web_sockets_stream.rs  web_transport_api.rs  websocket.rs  websocket_protocol.rs
verantyx-browser/crates/vx-render/src/: ai_renderer.rs  image_render.rs
verantyx-browser/crates/vx-sandbox-os/: Cargo.toml
verantyx-browser/crates/vx-sandbox-os/src/: lib.rs  macos.rs
verantyx-browser/crates/vx-security/: Cargo.toml
verantyx-browser/crates/vx-security/src/: origin.rs  (+1 more)
verantyx-browser/crates/vx-spatial/: Cargo.toml
verantyx-browser/ronin-ide/src/: index.html
verantyx-browser/ronin-ide/src-tauri/: Cargo.toml  tauri.conf.json
(+32714 files in other folders)
