[package]
name = "vx-js"
version.workspace = true
edition.workspace = true

[dependencies]
deno_core = "0.270"
serde_v8 = "0.190"
vx-dom = { path = "../vx-dom" }
vx-net = { path = "../vx-net" }
reqwest = { version = "0.12", features = ["rustls-tls"] }
base64 = "0.22"
sha2 = "0.10"
url = "2"
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
