[package]
name = "ronin-ide"
version = "0.1.0"
description = "The Native Forge for Verantyx JCross."
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Native Verantyx Integration
ronin-core = { path = "../../crates/ronin-core" }
