[package]
name = "ronin-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
nom = "8.0.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
ronin-repomap = { version = "0.1.0", path = "../ronin-repomap" }
ronin-telemetry = { version = "0.1.0", path = "../ronin-telemetry" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
