[package]
name = "vx-a11y-tree"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
vx-dom = { path = "../vx-dom" }
vx-spatial = { path = "../vx-spatial" }
