[package]
name = "vx-browser"
version.workspace = true
edition.workspace = true

[[bin]]
name = "verantyx-browser"
path = "src/main.rs"

[dependencies]
vx-net    = { path = "../vx-net" }
vx-dom    = { path = "../vx-dom" }
vx-js     = { path = "../vx-js" }
vx-render = { path = "../vx-render" }
vx-input  = { path = "../vx-input" }
vx-css    = { path = "../vx-css" }
vx-layout = { path = "../vx-layout" }

tokio     = { workspace = true, features = ["full"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
crossterm = "0.28"
ratatui   = { version = "0.29", features = ["crossterm"] }
clap      = { version = "4", features = ["derive"] }
url       = "2"
futures-util = "0.3"
chrono    = "0.4"
unicode-width = "0.2"
syntect   = "5"
wry = "0.55.0"
tao = "0.35.0"
html2md = "0.2.15"
crossbeam-channel = "0.5.15"
