[package]
name = "vx-dom"
version.workspace = true
edition.workspace = true

[dependencies]
vx-css     = { path = "../vx-css" }

scraper    = "0.22"
html5ever  = "0.27"
markup5ever_rcdom = "0.3"
selectors  = "0.25"
atomic_refcell = "0.1"

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
