[package]
name = "vx-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "net", "io-util", "rt-multi-thread"] }
crossbeam-channel = "0.5"
bincode = "1.3"
futures = "0.3"
bytes = "1.5"
