[package]
name = "vx-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sled = "0.34"
tokio = { workspace = true, features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
ordered-float = { version = "4", features = ["serde"] }
